# vending-api

./: .env  .gitignore  README.org  pyproject.toml  requirements.txt
vending_system/: manage.py
vending_system/api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
vending_system/api/migrations/: 0001_initial.py  0002_remove_user_is_buyer_remove_user_is_seller_user_role.py  0003_alter_user_deposit.py  0004_rename_seller_id_product_seller.py
vending_system/vending_system/: asgi.py  settings.py  urls.py  wsgi.py
